--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 # Site settings
-title: Your awesome title
+title: Stanford Solar Decathlon 2015
 email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: ""
 baseurl: ""
 url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  awhitty
+# collections:
+#   gallery:
+#     output: true
 
 # Build settings
 markdown: kramdown
