--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Stanford Solar Decathlon 2015
 email: your-email@domain.com
 description: ""
-baseurl: ""
-url: "http://yourdomain.com"
+baseurl: "/eden-press-site"
+url: "http://awhitty.github.io/eden-press-site/"
 github_username:  awhitty
 # collections:
 #   gallery:
